Update transform properties to use translate3d

--- a/style.css
+++ b/style.css
@@ -103,22 +103,22 @@ body {
 
 @keyframes flyInLeft {
   from {
-    transform: translateX(-150%);
+    transform: translate3d(-150%, 0, 0);
     opacity: 0;
   }
   to {
-    transform: translateX(0);
+    transform: translate3d(0, 0, 0);
     opacity: 1;
   }
 }
 
 @keyframes flyOutRight {
   from {
-    transform: translateX(0);
+    transform: translate3d(0, 0, 0);
     opacity: 1;
   }
   to {
-    transform: translateX(150%);
+    transform: translate3d(150%, 0, 0);
     opacity: 0;
   }
 }
