--- a/style.css
+++ b/style.css
@@ -1,9 +1,6 @@
 body {
   font-family: "Montserrat", sans-serif;
   margin: 0;
-  background-color: #000000;
-  background-image: url("assets/asfalt-light.png");
-  background-size: auto;
   display: flex;
   justify-content: end;
   align-items: center;
@@ -99,6 +96,25 @@ body {
 
 .img-smashburgers {
   width: 100%;
+}
+
+.img-section img {
+  z-index: -2;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+.content-background {
+  z-index: -1;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+
+  background: linear-gradient(to top, black 60%, rgba(255, 248, 240, 0) 100%);
 }
 
 @keyframes flyInLeft {
