--- a/style.css
+++ b/style.css
@@ -89,6 +89,40 @@ body {
   font-size: 36px;
 }
 
+.allergy-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  margin-left: 10%;
+  margin-right: 10%;
+}
+
+.allergy-showcase-box {
+  height: fit-content;
+  width: 100%;
+  padding: 10%;
+  border: 1px solid #FFF;
+  border-radius: 1rem;
+}
+
+.allergy-grid-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 80px;
+}
+
+.allergy-grid {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  gap: 32px;
+}
+
+.allergy-grid img {
+  width: 80%;
+  object-fit: contain;
+}
+
 .img-loaded-fries {
   margin-top: 50px;
   width: 65%;
